# parser

./: .gitignore  README.md  asynchro.py  main.py  pyproject.toml  requirements.txt  test.py  utils.py
.github/workflows/: main.yml
parser/: async.py  asynchro.py  cli.py  config.json  main.py  pages.py  reports.py  requirements.txt  test.py  tree.py  web.py
parser/samples/: avosetrov.json  dvmn.json  edu.avosetrov.json  gljewelry.json  google.json  spinit.json  vk.json
samples/: vk.json
src/: _asynchro.py  asynchro.py  cmd.py  consts.py  misc.py  parser.py  parsers.py  runner.py  saver.py  scanner.py  scantools.py  tree.py
src/parsers/: __init__.py  async_parser.py  base_parser.py  sync_parser.py
tests/: pytest.ini  test_pages.py  test_scanner.py  test_sync.py  test_tree.py  test_web.py
tests/scanner/: www.google.json
