[tool.poetry]
name = "parser"
version = "0.1.0"
description = "Fastly find all site's endpoints and build its map."
authors = ["mayosen <mayosenfarcry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.3"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
yarl = "^1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
