[tool.poetry]
name = "parser"
version = "0.1.0"
description = "Asynchronously find all site's endpoints and build its map."
authors = ["mayosen <mayosenfarcry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
yarl = "^1.8.2"
fake-useragent = "^1.1.3"
click = "^8.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-httpbin = "1.0.2"
werkzeug = "2.0.3"

[tool.poetry.scripts]
parse = "parser.cli:parse"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "info"
log_cli_format = "%(asctime)5s.%(msecs)03d [%(levelname)s] [%(name)s] [%(filename)s:%(lineno)d] %(message)s"
asyncio_mode = "auto"
